# Retina

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  cmake.yml
CMake/: PrecompiledHeaders.cmake
Data/Shaders/Retina/: Retina.glsl  Utility.glsl
Dependencies/: CMakeLists.txt
Dependencies/CGLTF/: Implementation.c
Dependencies/VMA/: Implementation.cpp
Shaders/: Bindings.glsl  FullscreenTriangle.vert.glsl  Intrinsics.glsl  Macros.glsl  Macros.hlsl  Tonemap.frag.glsl  Triangle.frag.glsl  Triangle.hlsl  Triangle.vert.glsl  Utilities.glsl
Shaders/RayTracing/: Common.glsl  Main.rahit.glsl  Main.rchit.glsl  Main.rgen.glsl  Main.rmiss.glsl  Random.glsl  Triangle.rchit.glsl  Triangle.rgen.glsl  Triangle.rmiss.glsl
dependencies/: CMakeLists.txt
include/Retina/Core/: ArcPtr.hpp  Core.hpp  EnableIntrusiveReferenceCount.hpp  Enums.hpp  Forwards.hpp  Logger.hpp  Macros.hpp  Meta.hpp  Traits.hpp  Types.hpp  Utility.hpp
include/Retina/Core/Event/: EventDispatcher.hpp
include/Retina/Core/STL/: ArcPtr.hpp  Defer.hpp  EnableIntrusiveReferenceCount.hpp  FixedSlotVector.hpp  FixedVector.hpp  FlatHashMap.hpp  FlatHashSet.hpp  Hash.hpp  ReferenceWrapper.hpp  SlotAllocator.hpp  SlotVector.hpp  UniquePtr.hpp
include/Retina/Entry/: Application.hpp  Camera.hpp  FrameCounter.hpp  FrameTimer.hpp
include/Retina/GUI/: ImGuiContext.hpp  Logger.hpp
include/Retina/Graphics/: BinarySemaphore.hpp  Buffer.hpp  BufferInfo.hpp  CommandBuffer.hpp  CommandBufferInfo.hpp  CommandPool.hpp  CommandPoolInfo.hpp  ComputePipeline.hpp  DeletionQueue.hpp  DeletionQueueInfo.hpp  DescriptorLayout.hpp  DescriptorLayoutInfo.hpp  DescriptorPool.hpp  DescriptorPoolInfo.hpp  DescriptorSet.hpp  DescriptorSetInfo.hpp  Device.hpp  DeviceInfo.hpp  Enum.hpp  Enums.hpp  Fence.hpp  FenceInfo.hpp  Forward.hpp  Graphics.hpp  GraphicsPipeline.hpp  HostDeviceTimeline.hpp  Image.hpp  ImageInfo.hpp  ImageView.hpp  Instance.hpp  InstanceInfo.hpp  Logger.hpp  Macros.hpp  MeshShadingPipeline.hpp  Pipeline.hpp  PipelineInfo.hpp  QueryPool.hpp  QueryPoolInfo.hpp  Queue.hpp  QueueInfo.hpp  (+8 more)
include/Retina/Graphics/NVIDIA/: NvidiaDlssFeature.hpp
include/Retina/Graphics/Native/: NativeDebugName.hpp
include/Retina/Graphics/RayTracing/: AccelerationStructure.hpp  AccelerationStructureInfo.hpp  BottomLevelAccelerationStructure.hpp  RayTracingPipeline.hpp  TopLevelAccelerationStructure.hpp
include/Retina/Graphics/Resources/: DescriptorTable.hpp  ShaderResource.hpp  ShaderResourceTable.hpp
include/Retina/Graphics/Sync/: SyncHostTimeline.hpp
include/Retina/Platform/: Input.hpp  InputInfo.hpp  Platform.hpp  PlatformManager.hpp  Window.hpp  WindowInfo.hpp
include/Retina/Sandbox/: Camera.hpp  FrameCounter.hpp  FrameTimer.hpp  Logger.hpp  MeshletModel.hpp  Model.hpp  SandboxApplication.hpp
include/Retina/WSI/: Forward.hpp  Input.hpp  Logger.hpp  Platform.hpp  WSI.hpp  Window.hpp  WindowInfo.hpp
src/Retina/: CMakeLists.txt
src/Retina/Codegen/Graphics/: GenerateEnums.py
src/Retina/Core/: CMakeLists.txt  Logger.cpp
src/Retina/Entry/: Application.cpp  CMakeLists.txt  Camera.cpp  FrameCounter.cpp  FrameTimer.cpp  main.cpp
src/Retina/Entry/Shaders/: Main.frag.glsl  Main.mesh.glsl  Main.vert.glsl
src/Retina/GUI/: CMakeLists.txt  ImGuiContext.cpp  Logger.cpp
src/Retina/GUI/Shaders/: ImGui.frag.glsl  ImGui.vert.glsl
src/Retina/Graphics/: BinarySemaphore.cpp  Buffer.cpp  CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp  ComputePipeline.cpp  DeletionQueue.cpp  DescriptorLayout.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Fence.cpp  GraphicsPipeline.cpp  HostDeviceTimeline.cpp  Image.cpp  ImageInfo.cpp  ImageView.cpp  Instance.cpp  Logger.cpp  MeshShadingPipeline.cpp  Pipeline.cpp  PipelineInfo.cpp  QueryPool.cpp  Queue.cpp  Sampler.cpp  Semaphore.cpp  Swapchain.cpp  TimelineSemaphore.cpp
src/Retina/Graphics/NVIDIA/: NvidiaDlssFeature.cpp
src/Retina/Graphics/Native/: NativeDebugName.cpp
src/Retina/Graphics/RayTracing/: AccelerationStructure.cpp  AccelerationStructureInfo.cpp  BottomLevelAccelerationStructure.cpp  RayTracingPipeline.cpp  TopLevelAccelerationStructure.cpp
src/Retina/Graphics/Resources/: DescriptorTable.cpp  ShaderResourceTable.cpp
src/Retina/Graphics/Sync/: SyncHostTimeline.cpp
src/Retina/Platform/: Input.cpp  PlatformManager.cpp  Window.cpp
src/Retina/Sandbox/: CMakeLists.txt  Camera.cpp  FrameCounter.cpp  FrameTimer.cpp  Logger.cpp  MeshletModel.cpp  Model.cpp  SandboxApplication.cpp
src/Retina/Sandbox/Assets/Models/: convert.bat
src/Retina/Sandbox/Shaders/: CopySwapchain.frag.glsl  Fullscreen.vert.glsl  GBufferResolve.frag.glsl  Main.frag.glsl  Main.mesh.glsl  Meshlet.glsl  TaaResolve.frag.glsl  Tonemap.frag.glsl  Visbuffer.frag.glsl  Visbuffer.mesh.glsl  VisbufferResolve.frag.glsl
src/Retina/WSI/: CMakeLists.txt  Input.cpp  Logger.cpp  Platform.cpp  Window.cpp
test/: main.cpp
